# dictate-app

./: .gitignore  DictateApp.icns  Makefile  Package.swift  README.md  pyproject.toml
Sources/DictateApp/: App.swift  HotkeyListener.swift  IndicatorWindow.swift  KeystrokeSimulator.swift  MicIndicatorView.swift  Models.swift  SpeechBridge.swift
src/dictate_app/: config.py  config.toml  speech_worker.py
